--- a/ZhenXie/ScriptTrainer/ScriptTrainer.csproj
+++ b/ZhenXie/ScriptTrainer/ScriptTrainer.csproj
@@ -32,27 +32,27 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="0Harmony">
-      <HintPath>F:\SteamLibrary\steamapps\common\镇邪 Zhenxie\ZX30\BepInEx\core\0Harmony.dll</HintPath>
+      <HintPath>F:\SteamLibrary\steamapps\common\镇邪 Zhenxie\ZX33\BepInEx\core\0Harmony.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="0Harmony20">
-      <HintPath>F:\SteamLibrary\steamapps\common\镇邪 Zhenxie\ZX30\BepInEx\core\0Harmony20.dll</HintPath>
+      <HintPath>F:\SteamLibrary\steamapps\common\镇邪 Zhenxie\ZX33\BepInEx\core\0Harmony20.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="Assembly-CSharp">
-      <HintPath>F:\SteamLibrary\steamapps\common\镇邪 Zhenxie\ZX30\ZX_Data\Managed\Assembly-CSharp.dll</HintPath>
+      <HintPath>F:\SteamLibrary\steamapps\common\镇邪 Zhenxie\ZX33\ZX_Data\Managed\Assembly-CSharp.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="BepInEx">
-      <HintPath>F:\SteamLibrary\steamapps\common\镇邪 Zhenxie\ZX30\BepInEx\core\BepInEx.dll</HintPath>
+      <HintPath>F:\SteamLibrary\steamapps\common\镇邪 Zhenxie\ZX33\BepInEx\core\BepInEx.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="BepInEx.Harmony">
-      <HintPath>F:\SteamLibrary\steamapps\common\镇邪 Zhenxie\ZX30\BepInEx\core\BepInEx.Harmony.dll</HintPath>
+      <HintPath>F:\SteamLibrary\steamapps\common\镇邪 Zhenxie\ZX33\BepInEx\core\BepInEx.Harmony.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="BepInEx.Preloader">
-      <HintPath>F:\SteamLibrary\steamapps\common\镇邪 Zhenxie\ZX30\BepInEx\core\BepInEx.Preloader.dll</HintPath>
+      <HintPath>F:\SteamLibrary\steamapps\common\镇邪 Zhenxie\ZX33\BepInEx\core\BepInEx.Preloader.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="System" />
@@ -64,34 +64,35 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
     <Reference Include="UnityEngine">
-      <HintPath>F:\SteamLibrary\steamapps\common\镇邪 Zhenxie\ZX30\ZX_Data\Managed\UnityEngine.dll</HintPath>
+      <HintPath>F:\SteamLibrary\steamapps\common\镇邪 Zhenxie\ZX33\ZX_Data\Managed\UnityEngine.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="UnityEngine.CoreModule">
-      <HintPath>F:\SteamLibrary\steamapps\common\镇邪 Zhenxie\ZX30\ZX_Data\Managed\UnityEngine.CoreModule.dll</HintPath>
+      <HintPath>F:\SteamLibrary\steamapps\common\镇邪 Zhenxie\ZX33\ZX_Data\Managed\UnityEngine.CoreModule.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="UnityEngine.IMGUIModule">
-      <HintPath>F:\SteamLibrary\steamapps\common\镇邪 Zhenxie\ZX30\ZX_Data\Managed\UnityEngine.IMGUIModule.dll</HintPath>
+      <HintPath>F:\SteamLibrary\steamapps\common\镇邪 Zhenxie\ZX33\ZX_Data\Managed\UnityEngine.IMGUIModule.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="UnityEngine.InputLegacyModule">
-      <HintPath>F:\SteamLibrary\steamapps\common\镇邪 Zhenxie\ZX30\ZX_Data\Managed\UnityEngine.InputLegacyModule.dll</HintPath>
+      <HintPath>F:\SteamLibrary\steamapps\common\镇邪 Zhenxie\ZX33\ZX_Data\Managed\UnityEngine.InputLegacyModule.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="UnityEngine.JSONSerializeModule">
-      <HintPath>F:\SteamLibrary\steamapps\common\镇邪 Zhenxie\ZX30\ZX_Data\Managed\UnityEngine.JSONSerializeModule.dll</HintPath>
+      <HintPath>F:\SteamLibrary\steamapps\common\镇邪 Zhenxie\ZX33\ZX_Data\Managed\UnityEngine.JSONSerializeModule.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="UnityEngine.TextRenderingModule">
-      <HintPath>F:\SteamLibrary\steamapps\common\镇邪 Zhenxie\ZX30\ZX_Data\Managed\UnityEngine.TextRenderingModule.dll</HintPath>
+      <HintPath>F:\SteamLibrary\steamapps\common\镇邪 Zhenxie\ZX33\ZX_Data\Managed\UnityEngine.TextRenderingModule.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="UnityEngine.UI">
-      <HintPath>F:\SteamLibrary\steamapps\common\镇邪 Zhenxie\ZX30\ZX_Data\Managed\UnityEngine.UI.dll</HintPath>
+      <HintPath>F:\SteamLibrary\steamapps\common\镇邪 Zhenxie\ZX33\ZX_Data\Managed\UnityEngine.UI.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="UnityEngine.UIModule">
-      <HintPath>F:\SteamLibrary\steamapps\common\镇邪 Zhenxie\ZX30\ZX_Data\Managed\UnityEngine.UIModule.dll</HintPath>
+      <HintPath>F:\SteamLibrary\steamapps\common\镇邪 Zhenxie\ZX33\ZX_Data\Managed\UnityEngine.UIModule.dll</HintPath>
       <Private>False</Private>
     </Reference>
   </ItemGroup>
