--- a/Ship of Fools/ScriptTrainer/ScriptTrainer.csproj
+++ b/Ship of Fools/ScriptTrainer/ScriptTrainer.csproj
@@ -55,6 +55,14 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
+    <Reference Include="Unity.Localization">
+      <HintPath>..\Library\Unity.Localization.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="Unity.Netcode.Runtime">
+      <HintPath>..\Library\Unity.Netcode.Runtime.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
     <Reference Include="Unity.ResourceManager">
       <HintPath>..\Library\Unity.ResourceManager.dll</HintPath>
       <Private>False</Private>
@@ -89,6 +97,10 @@
     </Reference>
     <Reference Include="UnityEngine.UIModule">
       <HintPath>..\Library\UnityEngine.UIModule.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="Zenject">
+      <HintPath>..\Library\Zenject.dll</HintPath>
       <Private>False</Private>
     </Reference>
   </ItemGroup>
