--- a/ScriptTrainerBase/ScriptTrainer/ScriptTrainer.csproj
+++ b/ScriptTrainerBase/ScriptTrainer/ScriptTrainer.csproj
@@ -32,76 +32,59 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="0Harmony20">
-      <HintPath>..\Library\0Harmony20.dll</HintPath>
-      <Private>False</Private>
+      <HintPath>..\Library\BepInEx\0Harmony20.dll</HintPath>
     </Reference>
     <Reference Include="BepInEx">
-      <HintPath>..\Library\BepInEx.dll</HintPath>
-      <Private>False</Private>
+      <HintPath>..\Library\BepInEx\BepInEx.dll</HintPath>
     </Reference>
     <Reference Include="BepInEx.Harmony">
-      <HintPath>..\Library\BepInEx.Harmony.dll</HintPath>
-      <Private>False</Private>
+      <HintPath>..\Library\BepInEx\BepInEx.Harmony.dll</HintPath>
     </Reference>
     <Reference Include="Core">
-      <HintPath>..\Library\Core.dll</HintPath>
-      <Private>False</Private>
+      <HintPath>..\Library\Game\Core.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
     <Reference Include="Unity.Localization">
-      <HintPath>..\Library\Unity.Localization.dll</HintPath>
-      <Private>False</Private>
+      <HintPath>..\Library\Game\Unity.Localization.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Netcode.Runtime">
-      <HintPath>..\Library\Unity.Netcode.Runtime.dll</HintPath>
-      <Private>False</Private>
+      <HintPath>..\Library\Game\Unity.Netcode.Runtime.dll</HintPath>
     </Reference>
     <Reference Include="Unity.ResourceManager">
-      <HintPath>..\Library\Unity.ResourceManager.dll</HintPath>
-      <Private>False</Private>
+      <HintPath>..\Library\Game\Unity.ResourceManager.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine">
-      <HintPath>..\Library\UnityEngine.dll</HintPath>
-      <Private>False</Private>
+      <HintPath>..\Library\Game\UnityEngine.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.AssetBundleModule">
-      <HintPath>..\Library\UnityEngine.AssetBundleModule.dll</HintPath>
-      <Private>False</Private>
+      <HintPath>..\Library\Game\UnityEngine.AssetBundleModule.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.CoreModule">
-      <HintPath>..\Library\UnityEngine.CoreModule.dll</HintPath>
-      <Private>False</Private>
+      <HintPath>..\Library\Game\UnityEngine.CoreModule.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.IMGUIModule">
-      <HintPath>..\Library\UnityEngine.IMGUIModule.dll</HintPath>
-      <Private>False</Private>
+      <HintPath>..\Library\Game\UnityEngine.IMGUIModule.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.InputLegacyModule">
-      <HintPath>..\Library\UnityEngine.InputLegacyModule.dll</HintPath>
-      <Private>False</Private>
+      <HintPath>..\Library\Game\UnityEngine.InputLegacyModule.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.TextRenderingModule">
-      <HintPath>..\Library\UnityEngine.TextRenderingModule.dll</HintPath>
-      <Private>False</Private>
+      <HintPath>..\Library\Game\UnityEngine.TextRenderingModule.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.UI">
-      <HintPath>..\Library\UnityEngine.UI.dll</HintPath>
-      <Private>False</Private>
+      <HintPath>..\Library\Game\UnityEngine.UI.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.UIModule">
-      <HintPath>..\Library\UnityEngine.UIModule.dll</HintPath>
-      <Private>False</Private>
+      <HintPath>..\Library\Game\UnityEngine.UIModule.dll</HintPath>
     </Reference>
     <Reference Include="Zenject">
-      <HintPath>..\Library\Zenject.dll</HintPath>
-      <Private>False</Private>
+      <HintPath>..\Library\Game\Zenject.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
