--- a/Bravery and Greed/ScriptTrainer/ScriptTrainer.csproj
+++ b/Bravery and Greed/ScriptTrainer/ScriptTrainer.csproj
@@ -37,13 +37,6 @@
     <Compile Include="Scripts.cs" />
     <Compile Include="ScriptTrainer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="UnityGameUI\DragAndDrog.cs" />
-    <Compile Include="UnityGameUI\Extensions.cs" />
-    <Compile Include="UnityGameUI\TooltipGUI.cs" />
-    <Compile Include="UnityGameUI\UIControls.cs" />
-    <Compile Include="UnityGameUI\UINavigation.cs" />
-    <Compile Include="UnityGameUI\UIWindows.cs" />
-    <Compile Include="UnityGameUI\WindowDragHandler.cs" />
   </ItemGroup>
   <ItemGroup>
     <WCFMetadata Include="Connected Services\" />
@@ -113,6 +106,7 @@
       <HintPath>E:\Program Files (x86)\Steam\steamapps\common\Bravery and Greed\BepInEx\unhollowed\UnityEngine.UIModule.dll</HintPath>
     </Reference>
   </ItemGroup>
+  <Import Project="..\..\..\UnityGameUI\UnityGameUI.projitems" Label="Shared" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>xcopy "$(TargetPath)" "E:\Program Files (x86)\Steam\steamapps\common\Bravery and Greed\BepInEx\Plugins\" /s /i /y</PostBuildEvent>
