--- a/Divinity Chronicles - 副本/ScriptTrainer/ScriptTrainer.csproj
+++ b/Divinity Chronicles - 副本/ScriptTrainer/ScriptTrainer.csproj
@@ -54,9 +54,11 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\Library\BepInEx_64\0Harmony20.dll</HintPath>
     </Reference>
-    <Reference Include="Assembly-CSharp, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>E:\Program Files (x86)\Steam\steamapps\common\江湖十一\JH11_Data\Managed\Assembly-CSharp.dll</HintPath>
+    <Reference Include="Assembly-CSharp">
+      <HintPath>..\Library\Game\Assembly-CSharp.dll</HintPath>
+    </Reference>
+    <Reference Include="Assembly-CSharp-firstpass">
+      <HintPath>..\Library\Game\Assembly-CSharp-firstpass.dll</HintPath>
     </Reference>
     <Reference Include="BepInEx, Version=5.4.5.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -68,6 +70,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Data" />
@@ -110,24 +113,26 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CharacterWindow.cs" />
-    <Compile Include="CollectWindow.cs" />
-    <Compile Include="PlaceWindow.cs" />
+    <Compile Include="PotionWindow.cs" />
+    <Compile Include="RelicWindows.cs" />
     <Compile Include="ItemWindows.cs" />
     <Compile Include="MainWindow.cs" />
-    <Compile Include="RelationWindow.cs" />
     <Compile Include="ScriptPatch.cs" />
     <Compile Include="Scripts.cs" />
     <Compile Include="ScriptTrainer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Teleport.cs" />
+    <Compile Include="UnityGameUI\Extensions.cs" />
+    <Compile Include="UnityGameUI\TooltipGUI.cs" />
+    <Compile Include="UnityGameUI\UIControls.cs" />
+    <Compile Include="UnityGameUI\UINavigation.cs" />
+    <Compile Include="UnityGameUI\UIWindows.cs" />
+    <Compile Include="UnityGameUI\WindowDragHandler.cs" />
   </ItemGroup>
   <ItemGroup>
     <WCFMetadata Include="Connected Services\" />
   </ItemGroup>
-  <Import Project="..\..\..\UnityGameUI\UnityGameUI.projitems" Label="Shared" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>xcopy "$(TargetPath)" "E:\Program Files (x86)\Steam\steamapps\common\江湖十一\BepInEx\Plugins\" /s /i /y</PostBuildEvent>
+    <PostBuildEvent>xcopy "$(TargetPath)" "E:\Games\Noobs Want To Live\BepInEx\Plugins\" /s /i /y</PostBuildEvent>
   </PropertyGroup>
 </Project>
